--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>This is an example project</h1>
+    <header></header>
+    <main><h1>This is an example project</h1></main>
+    <footer></footer>
   </body>
 </html>
