--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>This is an example project</h1>
+    <header></header>
+    <main>
+      <h1>This is an example project.</h1>
+      <p>
+        Select up to 20 JPG or JPEG images from you device. Or drag files to the
+        drop area. Wait for the compression to finish. If you need more control
+        over the JPEG compression quality please use thumbnails to activate the
+        manual mode. Download compressed images either separately or get them
+        all, grouped in a ZIP archive.
+      </p>
+    </main>
   </body>
 </html>
