--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <header></header>
     <main>
+      <section class="hero"></section>
       <h1>This is an example project.</h1>
       <p>
         Select up to 20 JPG or JPEG images from you device. Or drag files to the
