--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Document</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <p class="header-text"></p>
+    </header>
     <main>
       <section class="hero"></section>
       <h1>This is an example project.</h1>
