--- a/index.html
+++ b/index.html
@@ -10,15 +10,12 @@
       <p class="header-text">This is header</p>
     </header>
     <main>
-      <section class="hero"></section>
-      <h1>This is an example project.</h1>
-      <p>
-        Select up to 20 JPG or JPEG images from you device. Or drag files to the
-        drop area. Wait for the compression to finish. If you need more control
-        over the JPEG compression quality please use thumbnails to activate the
-        manual mode. Download compressed images either separately or get them
-        all, grouped in a ZIP archive.
-      </p>
+      <section class="hero">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button type="button" class="hero-btn" data-modal-open>
+          Order Service
+        </button>
+      </section>
     </main>
 
     <footer>I've added footer</footer>
