--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <button type="button" class="hero-btn" data-modal-open>
           Order Service
         </button>
+        <p>This is an example</p>
       </section>
     </main>
 
